--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,12 @@
 header {
-  background: url(/img/rs.jpg);
+  background: url(/img/1.jpg);
   background-size: cover;
   background-position: center;
-  min-width: 1000px;
+  min-height: 1000px;
+}
+
+@media screen and (max-width: 670px) {
+  header {
+    min-height: 500px;
+  }
 }
