--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,15 @@ header {
   min-height: 700px;
 }
 
+.section {
+  padding-top: 4vw;
+  padding-bottom: 4vw;
+}
+
+.parallax-container {
+  height: 400px;
+}
+
 @media screen and (max-width: 670px) {
   header {
     min-height: 500px;
