--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,9 @@ header {
   height: 400px;
 }
 
+.tabs .indicator {
+  background-color: aqua;
+}
 @media screen and (max-width: 670px) {
   header {
     min-height: 500px;
