--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,16 @@
+/* fonts local */
+@font-face {
+  font-family: "Roboto-Thin";
+  src: url(/fonts/Roboto-Regular.ttf) format("truetype");
+}
+* {
+  font-family: Roboto-Thin;
+}
+
+body {
+  background-color: #f8f8f8;
+}
+
 header {
   background: url(/img/1.jpg);
   background-size: cover;
