--- a/css/style.css
+++ b/css/style.css
@@ -10,19 +10,22 @@
 body {
   background-color: #f8f8f8;
 }
+.nav-wrapper {
+  background-color: #f8f8f8 !important;
+}
 .nav-wrapper .judul {
   color: #ff6b3d;
 }
 .nav-wrapper span {
-  margin-left: -10px;
+  margin-left: -8px;
   color: aqua;
 }
-header {
+/* header {
   background: url(/img/1.jpg);
   background-size: cover;
   background-position: center;
   min-height: 700px;
-}
+} */
 
 .section {
   padding-top: 4vw;
