--- a/css/style.css
+++ b/css/style.css
@@ -33,16 +33,14 @@ header {
   background-position: center;
   min-height: 500px;
 }
-header .row {
+/* header .row {
   margin-top: 160px;
-}
+} */
 header img {
-  margin-top: -90px;
   width: 380px;
 }
 header h2 {
   color: black;
-  text-align: justify;
 }
 
 /* section */
@@ -69,11 +67,13 @@ header h2 {
     margin-top: 13px;
     width: 200px;
   }
+  header .row {
+    margin-left: 50px;
+  }
   header h2 {
-    font-size: 30pt;
+    font-size: 28pt;
   }
   header img {
-    margin-left: -10px;
     width: 200px;
   }
 }
