--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,4 +1,6 @@
-/* fonts local */
+/* --------------------------------------------
+  MIAN STYLING
+----------------------------------------------- */
 @font-face {
   font-family: "PlusJakartaSans";
   src: url(/fonts/PlusJakartaSans-VariableFont_wght.ttf) format("truetype");
@@ -11,7 +13,9 @@ body {
   background-color: #f8f8f8;
 }
 
-/* header */
+/* --------------------------------------------
+  CONTENT
+----------------------------------------------- */
 .nav-wrapper {
   background-color: #f8f8f8 !important;
 }
@@ -22,7 +26,7 @@ body {
 }
 
 .nav-wrapper a {
-  font-size: 11pt;
+  font-size: 12pt;
   margin-top: 5px;
   color: black;
 }
