--- a/src/css/style.css
+++ b/src/css/style.css
@@ -9,15 +9,11 @@
   font-family: "Plus Jakarta Sans", sans-serif;
 }
 
-body {
-  background-color: #f8f8f8;
-}
-
 /* --------------------------------------------
   CONTENT
 ----------------------------------------------- */
 .nav-wrapper {
-  background-color: #f8f8f8 !important;
+  background-color: #ffffff !important;
 }
 
 .judul img {
@@ -31,11 +27,8 @@ body {
   color: black;
 }
 
-header {
-  background-color: #f8f8f8;
-  background-size: cover;
-  background-position: center;
-  min-height: 500px;
+header .slider {
+  background-color: #ffffff;
 }
 
 /* section */
@@ -46,7 +39,7 @@ header {
 
 /* parallax */
 .parallax-container {
-  height: 400px;
+  height: 200px;
 }
 
 /* tabs */
