--- a/src/css/style.css
+++ b/src/css/style.css
@@ -8,7 +8,10 @@
 * {
   font-family: "Plus Jakarta Sans", sans-serif;
 }
-
+.slider h3,
+h5 {
+  text-shadow: 1px 1px 1px black;
+}
 /* --------------------------------------------
   MOBILE VERSION
 ----------------------------------------------- */
