--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,15 +4,39 @@
 @font-face {
   font-family: "PlusJakartaSans";
   src: url(/fonts/PlusJakartaSans-VariableFont_wght.ttf) format("truetype");
+  src: url(/assets/fonts/Roboto-Regular.ttf) format("truetype");
 }
 * {
   font-family: "Plus Jakarta Sans", sans-serif;
 }
 .slider h3,
 h5 {
-  text-shadow: 1px 1px 1px black;
+  text-shadow: 1px 1px 3px rgb(0, 0, 0, 0.5);
 }
 
+#pertama {
+  margin-top: 70px;
+}
+.section img {
+  width: 250px;
+  border-radius: 3px;
+}
+.section h5 {
+  color: black;
+  font-weight: unset;
+  display: inline;
+  background-image: linear-gradient(#fff 60%, #265aab 55%);
+}
+/* .section h4::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 10%;
+  top: 21px;
+  left: -10px;
+  background: rgba(229, 57, 53, 100);
+  z-index: -1;
+} */
 /* --------------------------------------------
   MOBILE VERSION
 ----------------------------------------------- */
