--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,7 +18,7 @@ h5 {
   margin-top: 70px;
 }
 .section img {
-  width: 250px;
+  width: 230px;
   border-radius: 3px;
 }
 .section h5 {
@@ -27,16 +27,13 @@ h5 {
   display: inline;
   background-image: linear-gradient(#fff 60%, #265aab 55%);
 }
-/* .section h4::before {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 10%;
-  top: 21px;
-  left: -10px;
-  background: rgba(229, 57, 53, 100);
-  z-index: -1;
-} */
+
 /* --------------------------------------------
   MOBILE VERSION
 ----------------------------------------------- */
+@media screen and (max-widht: 670px) {
+  .section {
+    padding-top: 4vw;
+    padding-bottom: 4vw;
+  }
+}
