modifikasi & add komponen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,10 @@ h5 {
 #pertama {
   margin-top: 70px;
 }
+
+#terakhir {
+  margin-bottom: 150px;
+}
 .section img {
   width: 230px;
   border-radius: 3px;
