--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,6 +32,22 @@ h5 {
   background-image: linear-gradient(#fff 60%, #265aab 55%);
 }
 
+.tabs .tab a {
+  color: #000;
+}
+
+.tabs .tab a:hover {
+  color: #000;
+}
+
+.tabs .tab a:focus.active {
+  color: #000;
+  background-color: rgba(13, 71, 161, 0.2);
+}
+
+.tabs .indicator {
+  background-color: #0d47a1;
+}
 /* --------------------------------------------
   MOBILE VERSION
 ----------------------------------------------- */
