--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,6 +57,19 @@ h5 {
 .tabs .indicator {
   background-color: #0d47a1;
 }
+div .flow-text {
+  font-size: 12pt;
+  font-weight: bold;
+  color: #000;
+  display: inline-block;
+  margin-top: 35px;
+  background-image: linear-gradient(#fff 60%, #265aab 50%);
+}
+div .text {
+  margin-top: 5px;
+  color: #265aab;
+  text-shadow: 1px 1px 3px #fff;
+}
 /* --------------------------------------------
   MOBILE VERSION
 ----------------------------------------------- */
@@ -64,5 +77,12 @@ h5 {
   .section {
     padding-top: 4vw;
     padding-bottom: 4vw;
+  }
+  div .flow-text {
+    font-size: 10pt;
+    color: #000;
+    display: inline-block;
+    margin-top: 35px;
+    background-image: linear-gradient(#fff 60%, #265aab 50%);
   }
 }
