styling card-panel tentang kami

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,6 +75,10 @@ div .flow-text {
   width: 100px;
 }
 
+.parallax-container {
+  height: 400px;
+}
+
 /* --------------------------------------------
   MOBILE VERSION
 ----------------------------------------------- */
