--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,9 @@
 .white {
   box-shadow: 1px 1px 3px #0d47a1;
 }
+.navbar-fixed .link:active {
+  background-color: white !important;
+}
 
 /* slider */
 .slider h3,
@@ -82,12 +85,21 @@ div .flow-text {
 /* --------------------------------------------
   MOBILE VERSION
 ----------------------------------------------- */
-@media screen and (max-widht: 670px) {
+@media screen and (max-width: 670px) {
+  #pelayanan p {
+    padding: 1rem;
+    border-radius: 0.25rem;
+    background-color: #fff;
+    box-shadow: 1px 1px 2px 2px rgba(0, 0, 0, 0.1);
+  }
   .section {
     padding-top: 4vw;
     padding-bottom: 4vw;
   }
   section #tentang {
     margin-top: -1000px !important;
+  }
+  .parallax-container {
+    height: 250px;
   }
 }
