--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,10 +34,19 @@ h5 {
   background-image: linear-gradient(#fff 60%, #265aab 55%);
 }
 
-/* portfolio */
-
-.parallax-container {
-  height: 400px;
+/* contact */
+.section h4 {
+  color: white;
+  font-weight: unset;
+  display: inline;
+  background-image: linear-gradient(#005e9b 60%, #0d47a1 55%);
+}
+#kontak p {
+  color: white;
+}
+.material-icons.prefix,
+input[type="checkbox"] + span::before {
+  color: white;
 }
 
 /* --------------------------------------------
@@ -56,5 +65,8 @@ h5 {
   }
   section #tentang {
     margin-top: -1000px !important;
+  }
+  .parallax-container {
+    height: 600px;
   }
 }
