--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,10 @@
 .white {
   box-shadow: 1px 1px 3px #0d47a1;
 }
+.nav-wrapper a {
+  background-color: transparent !important;
+}
+
 
 /* slider */
 .slider h3,
