--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,11 +8,11 @@
 body {
   height: 100vh;
   width: 100%;
+  background-color: #eeeeee;
 }
 .header {
   width: 100%;
-  background-color: #282a35;
-  border-bottom: 1px solid #111;
+  background-color: #eeeeee;
   position: fixed;
   top: 0;
   left: 0;
@@ -22,12 +22,12 @@ body {
   margin: auto;
   display: flex;
   justify-content: space-between;
-  height: 50px;
+  height: 70px;
   align-items: center;
 }
 .header .logo {
   font-size: 22px;
-  color: white;
+  color: #2c2c2c;
   text-decoration: none;
 }
 .header .contanier .nav-links {
@@ -35,7 +35,7 @@ body {
   align-items: center;
 }
 .header .contanier .nav-links a {
-  color: #fff;
+  color: #2c2c2c;
   text-decoration: none;
   margin-left: 30px;
   text-transform: capitalize;
